fix padding on mobile sliders

--- a/wp-content/themes/veryqueertoronto/sass/layouts/_all.scss
+++ b/wp-content/themes/veryqueertoronto/sass/layouts/_all.scss
@@ -663,12 +663,11 @@ form:not(.matchmaking) {
 }
 
 .mobile-cards {
-  margin-left: 20px;
   @media (min-width: 1100px) {
     display: none;
   }
   .splide__slide {
-    width: 70vw !important;
+    width: 80vw !important;
     @media (min-width: 500px) {
       width: 300px !important;
     }
@@ -683,6 +682,11 @@ form:not(.matchmaking) {
   }
   .splide__track {
     padding-right: 20px !important;
+    padding-left: 20px !important;
+    @media (min-width: 970px) {
+      padding-right: 0px !important;
+      padding-left: 0px !important;
+    }
   }
 }
 
@@ -718,18 +722,14 @@ form:not(.matchmaking) {
   }
 }
 
-.testimonials {
-  @media (max-width: 1100px) {
-    margin-left: 20px;
-  }
-}
-
 .testimonials-section {
   padding: 80px 0 160px;
   .wrapper {
     padding: 0;
+    width: 100%;
     @media (min-width: 1100px) {
       padding: 0 20px;
+      width: 900px;
     }
   }
   h2 {
@@ -766,13 +766,9 @@ form:not(.matchmaking) {
     .splide__pagination {
       bottom: -30px;
     }
-    .splide__list {
-      @media (min-width: 970px) {
-        justify-content: center;
-      }
-    }
     .splide__track {
       padding-right: 20px !important;
+      padding-left: 20px !important;
     }
   }
 }
